Add missing tablets

--- a/RoyalPalace/config.json
+++ b/RoyalPalace/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "This JAG indicates how convex spaces connect with one another in the royal palace of Ugarit: courtyards are green, tombs are brown, staircases are blue-purple, and spaces on an upper floor are pink. ",
+    "intro": "This JAG indicates how convex spaces connect with one another in the royal palace of Ugarit. Nodes are colored according to their type: courtyards are green, tombs are brown, staircases are blue-purple, and spaces on an upper floor are pink. ",
     "title": "JAG of the Royal Palace (v0.7.5)"
   },
   "legend": {
